# diff

./: .clang-format  CMakeLists.txt  HOWTO.md  README.md
img/: components.puml  instances.puml  sdlc.drawio
include/diff/: Build.h  CastChecker.h  Component.h  Config.h  Demangler.h  DependencyId.h  DependencyRegistry.h  Exception.h  Factory.h  FactoryRegisterer.h  FactoryRegistry.h  Topology.h  TopologyBuilder.h  TopologyLoader.h
test/: CMakeLists.txt  CastCheckerTest.cpp  TestCastChecker.cpp  TestTopologyLoader.cpp  TopologyLoaderTest.cpp
